--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,30 @@
 // Navigation code here
 .navigation {
-    
-}
+    width:100%;
+    background-color: @wild-sand;
+    padding: 1% 0;
+    border-bottom: 1px solid @sea-shell;
+
+        nav {
+            max-width: 800px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            margin: 0 auto;
+
+                .links {
+                    width:50%;
+                    margin-top: 2%;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: flex-end;
+
+                        a {
+                            font-size: 1.6rem;
+                            color: @river-bend;
+                            text-decoration: none;
+                        }
+                }
+        }// Closes .nav
+}// Closes .navigation
