--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,8 +7,7 @@
 
         nav {
             max-width: 800px;
-            display: flex;
-            flex-direction: column;
+            .flex-column();
             justify-content: space-between;
             align-items: center;
             margin: 0 auto;
@@ -16,9 +15,7 @@
                 .links {
                     width:50%;
                     margin-top: 2%;
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: flex-end;
+                    .flex-center();
 
                         a {
                             font-size: 1.6rem;
