--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,23 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  width: 30%;
+  text-align: center;
+  font-size: 1.8rem;
+  color: #F6F7F8;
+  background-color: #22283A;
+  padding: 3% 5%;
+  border: 1px solid #22283A;
+  border-radius: 5px;
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background-color: #F6F7F8;
+  padding: 3% 5%;
+  border: 1px solid #22283A;
+  border-radius: 5px;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
