--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,11 @@ p {
   justify-content: space-around;
   align-items: flex-end;
 }
+@media ((max-width:500px)) {
+  .navigation nav .links {
+    width: 80%;
+  }
+}
 .navigation nav .links a {
   font-size: 1.6rem;
   color: #454A59;
@@ -199,6 +204,10 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro img {
+  border-radius: 5px;
+  width: 100%;
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -209,6 +218,21 @@ footer {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media ((max-width:500px)) {
+  .home .space-images .blast {
+    width: 100%;
+  }
+}
+@media ((max-width:500px)) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media ((max-width:500px)) {
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .space-images img {
   width: 28%;
@@ -232,8 +256,20 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media ((max-width:500px)) {
+  .home .walk {
+    margin-top: 10px;
+    flex-direction: column;
+    padding: 3%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media ((max-width:500px)) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -251,6 +287,12 @@ footer {
   border: 1px solid #22283A;
   border-radius: 5px;
 }
+@media ((max-width:500px)) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 5% 0;
+  }
+}
 .home .walk .walk-text .btn:hover {
   color: #22283A;
   background-color: #F6F7F8;
@@ -258,9 +300,21 @@ footer {
   border: 1px solid #22283A;
   border-radius: 5px;
 }
+@media ((max-width:500px)) {
+  .home .walk .walk-text .btn:hover {
+    padding: 5% 0;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media ((max-width:500px)) {
+  .home .walk .walk-img {
+    order: -1;
+    width: 100%;
+    margin: 1% 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
