--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,11 @@
 
   .intro {
 
+    img {
+      border-radius: 5px;
+      width:100%;
+    }
+
     h2 {
       padding: 15px;
     }
@@ -19,6 +24,21 @@
     flex-wrap: wrap;
     width: 100%;
 
+    .blast{
+      @media (@phone){
+        width:100%;
+      }
+    }  
+    .sky {
+      @media (@phone){
+        display: none;
+      }
+    }  
+    .launch {
+      @media (@phone){
+        display: none;
+      }  
+    }
     img {
       width: 28%;
       margin: 20px 2.5%;
@@ -46,8 +66,18 @@
     display: flex;
     justify-content: center;
 
+    @media (@phone) {
+      margin-top: 10px;
+      flex-direction: column;
+      padding: 3%;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media (@phone){
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -64,8 +94,17 @@
         // font-weight: bold;
         .btn-style (@porcelain, @btn-bg-color);
 
+        @media (@phone){
+          width: 100%;
+          padding: 5% 0;
+        }
+
           &:hover {
             .btn-style (@btn-bg-color, @porcelain);
+
+            @media (@phone){
+              padding: 5% 0;
+            }
           }
       }
     }
@@ -73,6 +112,12 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media (@phone){
+        order: -1;
+        width:100%;
+        margin: 1% 0;
+      }
       
       img {
         width: 100%;
