--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,6 +17,10 @@
                     margin-top: 2%;
                     .flex-center();
 
+                    @media (@phone) {
+                        width: 80%;
+                    }
+
                         a {
                             font-size: 1.6rem;
                             color: @river-bend;
