--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,14 +33,13 @@
                                 }
                                 to {
                                     color: darkorange;
-                                    font-weight: bold;
-                                    text-decoration: underline;
+                                    font-size: 2rem;
                                 }
                             }
 
                                 &:hover {
                                     animation-name: navBar;
-                                    animation-duration: 1200ms;
+                                    animation-duration: 500ms;
                                     animation-timing-function: linear;
                                     animation-fill-mode: forwards;
                                 }
